--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- Put your site title here -->
   <title>
-    Syed Ali Hussnain | A Web Developer based in Lahore, Pakistan.
+    Vitor Almeida | A World Level Data Scientist.
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
@@ -42,7 +42,7 @@
       <nav class="nav" role="navigation">
         <ul class="nav__items">
           <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
+          <li class="nav__item"><a href="#clients" class="nav__link">Knowledge</a></li>
           <li class="nav__item">
             <a href="#about" class="nav__link">About</a>
           </li>
@@ -56,10 +56,10 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Syed Ali Hussnain</span>
+          <span>Vitor Almeida</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>A World Level Data Scientist for your projects.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
@@ -78,84 +78,82 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Electoral Campaign Dashboard</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                A Power BI dashboard that was created to analyze the voting prospecting campaign for a Brazilian congressman.
               </p>
               <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>Power BI</li>
+                <li>SQL</li>
+                <li>Python</li>
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiODJlYmE4NGQtMzllZC00Y2YwLWJmN2QtYTY5M2EyM2UyNWE4IiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9" target="_blank" class="link__text">
+                  Visit Dashboard <span>&rarr;</span>
                 </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiODJlYmE4NGQtMzllZC00Y2YwLWJmN2QtYTY5M2EyM2UyNWE4IiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9" title="View Source Code" target="_blank">
+                  <img src="./images/powerbi.png" class="work__code" alt="Power BI">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./images/zemario.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Balance of Trade</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                A Power BI report created to analyze the brazilian balance of trade (BOT), from 2011 to 2021. It was created for IFAG (Goiás Institute for the Strengthening of Agriculture and Livestock).
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Power BI</li>
+                <li>SQL</li>
+                <li>Python</li>
+                <li>Debian</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiYTY1ODdkODMtMzUyNi00ZmZmLTkyOTYtNjU1ZTU0ZmYzMzkwIiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiYTY1ODdkODMtMzUyNi00ZmZmLTkyOTYtNjU1ZTU0ZmYzMzkwIiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9">
+                  <img src="./images/powerbi.png" class="work__code" title="View Source Code" alt="Power BI">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="./images/balanca.png" class="work__image" alt="Project 2" />
             </div>
           </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Notificator</h3>
+              <h3>CAGED - General Registry of Employed and Unemployed Persons</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                An interactive Power BI report created to support our clients in making decisions regarding public employment policies in the agricultural and livestock sector using Caged data. 
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Power BI</li>
+                <li>R</li>
+                <li>Python</li>
+                <li>SQL</li>
+                <li>Javascript</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMjMyOTAzMWQtN2FmNi00MDE5LTgwNWYtZTYyOGFlYWJkZjRjIiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                <a href="https://app.powerbi.com/view?r=eyJrIjoiMjMyOTAzMWQtN2FmNi00MDE5LTgwNWYtZTYyOGFlYWJkZjRjIiwidCI6IjFhMzRiMGVhLTljODAtNDEwZS04YmU4LWVkYzFiZjk0ODg4ZCJ9">
+                  <img src="./images/powerbi.png" class="work__code" title="View Source Code" alt="Power BI">
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+              <img src="./images/caged.png" class="work__image" alt="Project 3" />
             </div>
           </div>
         </div>
@@ -188,10 +186,18 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
+              Olá, sou Vítor Almeida. Bacharel em Gestão da Informação, com 5 anos de experiência em Business Intelligence (BI). Minhas habilidades e serviços incluem:
+            </p>
+              <li>Coleta e tratamento de dados</li>
+              <li>Modelagem de Machine Learning</li>
+              <li>Automações em Python</li>
+              <li>Criação de relatórios de negócio</li>
+              <li>Interpretação de Dados.</li>
+            <p> 
+              Meu interesse por BI vem da busca por decisões bem fundamentadas, refletindo minha filosofia de comprometimento profundo com o sucesso dos negócios dos meus clientes. 
+            </p>
+            <p>
+              Busco enriquecer meu portfólio e construir cases de negócios sólidos. Meu trabalho é guiado por valores como curiosidade, resultados, transparência, comunicação e eficácia. Meus clientes podem esperar perguntas claras, processos transparentes e entregas pontuais, buscando resultados claros.
             </p>
             <!-- Provide a link to your resume -->
             <a href="#" class="btn">My Resume</a>
@@ -199,7 +205,7 @@
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
+            <img class="about__photo-container" src="./images/perfil.png" alt="perfil" />
           </div>
         </div>
       </div>
